--- a/CrudSwing/src/main/java/org/uv/view/GuiEmpleados.form
+++ b/CrudSwing/src/main/java/org/uv/view/GuiEmpleados.form
@@ -28,6 +28,9 @@
   <SubComponents>
     <Container class="javax.swing.JInternalFrame" name="jInternalFrame2">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="bd" green="db" red="da" type="rgb"/>
+        </Property>
         <Property name="visible" type="boolean" value="true"/>
       </Properties>
 
